--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 ##server.port=${PORT:5000}
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+##spring.datasource.url=${JDBC_DATABASE_URL}
+##spring.datasource.username=${JDBC_DATABASE_USERNAME}
+##spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 ##spring.datasource.url=jdbc:postgresql://localhost:5432/Meteo
 ##spring.datasource.username=postgres
