--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 ##spring.datasource.username=${JDBC_DATABASE_USERNAME}
 ##spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-##spring.datasource.url=jdbc:postgresql://localhost:5432/Meteo
-##spring.datasource.username=postgres
-##spring.datasource.password=mru
+spring.datasource.url=jdbc:postgresql://localhost:5432/Meteo
+spring.datasource.username=postgres
+spring.datasource.password=mru
 
 
 # Removes strange clod() error logging
