--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,6 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 ##spring.datasource.username=postgres
 ##spring.datasource.password=mru
 
-
 # Removes strange clod() error logging
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -17,3 +16,15 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+# Actuator config
+# Expose HTTP REST Endpoint
+management.endpoints.web.exposure.exclude=
+management.endpoints.web.exposure.include=*
+
+management.endpoint.health.show-details=always
+
+info.app.name = @project.name@
+info.app.groupId = @project.groupId@
+info.app.artifactId = @project.artifactId@
+info.app.version = @project.version@
