--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,8 +35,8 @@ info.app.version = @project.version@
 spring.boot.admin.client.url=https://sbameadow.herokuapp.com/
 
 #configs to give secured server info to SBA while registering
-spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
-spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
+spring.boot.admin.client.instance.metadata.user.name=kot
+spring.boot.admin.client.instance.metadata.user.password=mru
 
 #Required for this application to connect to SBA
 spring.boot.admin.client.username=kotadmina
