--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ info.app.artifactId = @project.artifactId@
 info.app.version = @project.version@
 
 spring.boot.admin.client.url=https://sbameadow.herokuapp.com/
+spring.boot.admin.client.instance.health-url=https://bxf.herokuapp.com/actuator/health
 
 #configs to give secured server info to SBA while registering
 spring.boot.admin.client.instance.metadata.user.name=kot
