--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.security.user.name=kot
 spring.security.user.password=mru
 
 ##server.port=${PORT:5000}
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+##spring.datasource.url=${JDBC_DATABASE_URL}
+##spring.datasource.username=${JDBC_DATABASE_USERNAME}
+##spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-##spring.datasource.url=jdbc:postgresql://localhost:5432/Meteo
-##spring.datasource.username=postgres
-##spring.datasource.password=mru
+spring.datasource.url=jdbc:postgresql://localhost:5432/Meteo
+spring.datasource.username=postgres
+spring.datasource.password=mru
 
 # Removes strange clod() error logging
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -36,8 +36,8 @@ spring.boot.admin.client.url=https://sbameadow.herokuapp.com/
 spring.boot.admin.client.instance.service-base-url=https://bxf.herokuapp.com/
 
 #configs to give secured server info to SBA while registering
-spring.boot.admin.client.instance.metadata.user.name=kot
-spring.boot.admin.client.instance.metadata.user.password=mru
+spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
+spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
 
 #Required for this application to connect to SBA
 spring.boot.admin.client.username=kotadmina
