--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-##spring.security.***REMOVED***.name=
-##spring.security.***REMOVED***.***REMOVED***word=
+##spring.security.user.name=
+##spring.security.user.password=
 
 ##server.port=${PORT:5000}
 ##spring.datasource.url=${JDBC_DATABASE_URL}
-##spring.datasource.***REMOVED***name=${JDBC_DATABASE_USERNAME}
-##spring.datasource.***REMOVED***word=${JDBC_DATABASE_PASSWORD}
+##spring.datasource.username=${JDBC_DATABASE_USERNAME}
+##spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Meteo
-spring.datasource.***REMOVED***name=
-spring.datasource.***REMOVED***word=
+spring.datasource.username=
+spring.datasource.password=
 
 # Removes strange clod() error logging
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -32,13 +32,13 @@ info.app.groupId = @project.groupId@
 info.app.artifactId = @project.artifactId@
 info.app.version = @project.version@
 
-spring.boot.***REMOVED***.client.url=https://sbameadow.herokuapp.com/
-spring.boot.***REMOVED***.client.instance.service-base-url=https://bxf.herokuapp.com/
+spring.boot.admin.client.url=https://sbameadow.herokuapp.com/
+spring.boot.admin.client.instance.service-base-url=https://bxf.herokuapp.com/
 
 #configs to give secured server info to SBA while registering
-spring.boot.***REMOVED***.client.instance.metadata.***REMOVED***.name=${spring.security.***REMOVED***.name}
-spring.boot.***REMOVED***.client.instance.metadata.***REMOVED***.***REMOVED***word=${spring.security.***REMOVED***.***REMOVED***word}
+spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
+spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
 
 #Required for this application to connect to SBA
-spring.boot.***REMOVED***.client.***REMOVED***name=
-spring.boot.***REMOVED***.client.***REMOVED***word=
+spring.boot.admin.client.username=
+spring.boot.admin.client.password=
